src/objects/Polling__c.object
<CustomObject>
    <fields>
        <fullName>LastSuccessfulRunTime__c</fullName>
        <label>LastSuccessfulRunTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OperatingUnit__c</fullName>
        <label>OperatingUnit</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrchKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>OrchKey</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Polling</label>
    <nameField>
        <label>Polling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>